--- a/app/src/main/res/layout/d_row_all_categories.xml
+++ b/app/src/main/res/layout/d_row_all_categories.xml
@@ -4,16 +4,8 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/addCategory"
+        android:id="@+id/category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button" />
-
-    <EditText
-        android:id="@+id/categoryName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
 </LinearLayout>
